--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     env_file:
       - .env
     ports:
-      - "8000:8000"
+      - "${API_PORT:-18080}:8000"
     restart: unless-stopped
     healthcheck:
       test:
