--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
   "fastapi>=0.116.0,<1.0.0",
   "pydantic-settings>=2.10.1,<3.0.0",
   "uvicorn>=0.35.0,<1.0.0",
+  "websockets>=12",
 ]
 
 [project.optional-dependencies]
