--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,8 @@ services:
       dockerfile: docker/base.Dockerfile
     env_file:
       - .env
+    volumes:
+      - ./data:/app/data
     command:
       ["sh", "-c", "python -m llm_tradebot.services.feature_engine && sleep infinity"]
     restart: unless-stopped
