test: router force target via ROUTER_TEST_FORCE_TARGET

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ VERSION=0.1.0
 HOST=0.0.0.0
 PORT=8000
 API_PORT=18080
+# Optional router test override: set to -1, 0, or 1 (leave empty to disable)
+# ROUTER_TEST_FORCE_TARGET=
